force-app/main/default/objects/Class__c/fields/DaysPerWeek__c.field-meta.xml
<CustomField>
    <fullName>DaysPerWeek__c</fullName>
    <label>Days per Week</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>