force-app/main/default/objects/Class__c/fields/DurationInWeeks__c.field-meta.xml
<CustomField>
    <fullName>DurationInWeeks__c</fullName>
    <formula>FLOOR((EndDate__c - StartDate__c) / 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration in Weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>