force-app/main/default/objects/Class__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Topic</label>
    <referenceTo>Topic__c</referenceTo>
    <relationshipLabel>Classes</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>