force-app/main/default/objects/Class__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Capacity__c</columns>
    <columns>Department__c</columns>
    <columns>DaysPerWeek__c</columns>
    <columns>DurationInWeeks__c</columns>
    <columns>EndDate__c</columns>
    <columns>Room__c</columns>
    <columns>ScheduledTime__c</columns>
    <columns>StartDate__c</columns>
    <columns>Status__c</columns>
    <columns>Topic__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>